Fixed issue with overflowing images

--- a/client/assets/scss/site/blog.scss
+++ b/client/assets/scss/site/blog.scss
@@ -30,6 +30,12 @@ article {
             }
         }
     }
+
+    section {
+        img {
+            max-width: 100%;
+        }
+    }
 }
 
 aside {
